Implement fix for duplicate destfiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,7 @@ importFrom(purrr,pluck)
 importFrom(rlang,enexpr)
 importFrom(rstudioapi,insertText)
 importFrom(stringr,str_extract)
+importFrom(usethis,ui_info)
 importFrom(usethis,ui_stop)
+importFrom(usethis,ui_warn)
 importFrom(utils,download.file)
