--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: myrmidon
 Type: Package
 Title: Personal Functions Toolbox
-Version: 0.5.1
-Date: 2020-09-21
+Version: 0.5.2
+Date: 2020-10-06
 Author: Francis Barton (@ludictech)
 Maintainer: Francis Barton <fbarton@alwaysdata.net>
 Description: A package containing functions I want to have available most times I
@@ -10,8 +10,22 @@ Description: A package containing functions I want to have available most times 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: rstudioapi, here, usethis, utils, rlang, dplyr, httr, magrittr,
-    purrr, stringr, readr, rvest, xml2
+Imports: 
+    rstudioapi,
+    here,
+    usethis,
+    utils,
+    rlang,
+    dplyr,
+    httr,
+    lubridate,
+    magrittr,
+    purrr,
+    stringr,
+    readr,
+    rvest,
+    xml2,
+    assertthat
 Suggests: 
     testthat
 RoxygenNote: 7.1.1
