--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: myrmidon
 Type: Package
 Title: Personal Functions Toolbox
-Version: 0.5.2
-Date: 2020-10-06
-Author: Francis Barton (@ludictech)
-Maintainer: Francis Barton <fbarton@alwaysdata.net>
+Version: 0.5.3
+Date: 2021-01-18
+Author: Fran Barton (@ludictech)
+Maintainer: Fran Barton <fbarton@alwaysdata.net>
 Description: A package containing functions I want to have available most times I
     start up R. Also hoping to develop my own default RMarkdown template.
 License: MIT + file LICENSE
