include gmaps_to_sf.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(download_file)
 export(download_files)
 export(expand_sf_bbox)
 export(get_postcode_data)
+export(gmaps_to_sf)
 export(import_rds)
 export(pipeToGlimpse)
 export(save_it)
