--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: myrmidon
 Type: Package
 Title: Personal Functions Toolbox
-Version: 0.6
+Version: 0.6.1
 Date: 2021-06-25
 Author: Fran Barton (@ludictech)
 Maintainer: Fran Barton <fbarton@alwaysdata.net>
@@ -19,6 +19,7 @@ Imports:
     purrr,
     readr,
     rlang,
+    rmarkdown,
     rstudioapi,
     rvest,
     sf,
@@ -28,3 +29,5 @@ Imports:
     utils,
     xml2
 RoxygenNote: 7.1.2
+Depends: 
+    R (>= 2.10)
