--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: myrmidon
 Type: Package
 Title: Personal Functions Toolbox
-Version: 0.6.1
-Date: 2021-06-25
+Version: 0.6.3
+Date: 2021-11-30
 Author: Fran Barton (@ludictech)
 Maintainer: Fran Barton <fbarton@alwaysdata.net>
 Description: A package containing functions I want to have available most times
@@ -29,7 +29,9 @@ Imports:
     testthat,
     usethis,
     utils,
+    vctrs,
     xml2
 RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
+Config/testthat/edition: 3
