--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,18 @@
 
 export()
 export(batch_it)
+export(bb_to_poly)
+export(commonest)
 export(download_file)
 export(download_files)
 export(expand_sf_bbox)
-export(get_postcode_data)
 export(gmaps_to_sf)
 export(how_old_am_i)
 export(import_rds)
 export(knit_to_html5)
 export(new_rmd)
 export(order_along)
-export(pipeToGlimpse)
+export(postcode_data_join)
 export(save_it)
 export(year_dates)
 importFrom(assertthat,assert_that)
@@ -21,6 +22,7 @@ importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,c_across)
 importFrom(dplyr,contains)
+importFrom(dplyr,desc)
 importFrom(dplyr,ends_with)
 importFrom(dplyr,everything)
 importFrom(dplyr,last_col)
@@ -29,6 +31,7 @@ importFrom(dplyr,num_range)
 importFrom(dplyr,starts_with)
 importFrom(magrittr,"%>%")
 importFrom(rlang,`:=`)
+importFrom(usethis,ui_code)
 importFrom(usethis,ui_info)
 importFrom(usethis,ui_nope)
 importFrom(usethis,ui_oops)
