--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,11 @@ export(commonest)
 export(download_file)
 export(download_files)
 export(expand_sf_bbox)
+export(fit_square)
+export(get_native_list_separator)
+export(gitmoji)
+export(gitmoji_desc)
+export(gitmoji_list)
 export(gmaps_to_sf)
 export(how_old_am_i)
 export(import_rds)
@@ -15,7 +20,12 @@ export(knit_to_html5)
 export(new_rmd)
 export(order_along)
 export(postcode_data_join)
+export(prompt_reset)
+export(prompt_toggle)
+export(remove_win_reserved_char)
 export(save_it)
+export(wtf)
+export(wtx)
 export(year_dates)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
