Making my prompt work (almost)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,10 @@ export(gmaps_to_sf)
 export(how_old_am_i)
 export(import_rds)
 export(knit_to_html5)
+export(my_prompt)
 export(new_rmd)
 export(order_along)
 export(postcode_data_join)
-export(prompt_reset)
-export(prompt_toggle)
 export(remove_win_reserved_char)
 export(save_it)
 export(wtf)
