--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(download_file)
 export(download_files)
 export(expand_sf_bbox)
 export(fit_square)
-export(get_native_list_separator)
+export(get_daily_welsh_word)
 export(gitmoji)
 export(gitmoji_desc)
 export(gitmoji_list)
@@ -21,10 +21,8 @@ export(my_prompt)
 export(new_rmd)
 export(order_along)
 export(postcode_data_join)
-export(remove_win_reserved_char)
 export(save_it)
-export(wtf)
-export(wtx)
+export(switch_my_prompt)
 export(year_dates)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
