Further refinements to my prompt-setting functions (now called myr_prompt_*())

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,14 +17,16 @@ export(gmaps_to_sf)
 export(how_old_am_i)
 export(import_rds)
 export(knit_to_html5)
-export(my_prompt)
+export(myr_prompt_heavy)
+export(myr_prompt_light)
+export(myr_prompt_medium)
+export(myr_prompt_no_unicode)
 export(new_rmd)
 export(order_along)
 export(postcode_data_join)
 export(read_rss)
 export(remove_nas)
 export(save_it)
-export(switch_my_prompt)
 export(year_dates)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
