Fix dww() and re-document package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(bbox_to_poly)
 export(commonest)
 export(download_file)
 export(download_files)
+export(edit_rstudio_recent_projects)
 export(expand_sf_bbox)
+export(extract_col_types)
 export(fit_square)
 export(get_daily_welsh_word)
 export(gitmoji)
@@ -27,6 +29,7 @@ export(postcode_data_join)
 export(read_rss)
 export(remove_nas)
 export(save_it)
+export(view)
 export(year_dates)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
