--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: myrmidon
 Type: Package
-Title: Personal Functions Toolbox
-Version: 0.6.9
-Date: 2023-01-04
+Title: My R Kitchen Drawer
+Version: 0.6.10
+Date: 2023-01-05
 Author: Fran Barton (@ludictech)
 Maintainer: Fran Barton <fbarton@alwaysdata.net>
-Description: A package containing functions I want to have available most times
-  I start up R, as well as my own HTML5 RMarkdown template.
+Description: Fran's personal useful tools, tricks and toys. Some functions I
+    want to have available most times I start up R, as well as my own HTML5
+    RMarkdown template.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
