--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(expand_sf_bbox)
 export(extract_col_types)
 export(fit_square)
 export(get_daily_welsh_word)
-export(get_tube_route)
 export(gitmoji)
 export(gitmoji_desc)
 export(gitmoji_name)
@@ -30,6 +29,7 @@ export(order_along)
 export(patch_join)
 export(postcode_data_join)
 export(project_mascot)
+export(random_tube_route)
 export(read_rss)
 export(register_pdf_font)
 export(remove_nas)
