--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(edit_rstudio_recent_projects)
 export(expand_sf_bbox)
 export(extract_col_types)
 export(fit_square)
+export(flowview)
 export(get_daily_welsh_word)
 export(gitmoji)
 export(gitmoji_desc)
@@ -39,19 +40,20 @@ export(view)
 export(view_xl)
 export(year_dates)
 importFrom(dplyr,across)
-importFrom(dplyr,all_of)
-importFrom(dplyr,any_of)
 importFrom(dplyr,c_across)
-importFrom(dplyr,contains)
 importFrom(dplyr,desc)
-importFrom(dplyr,ends_with)
-importFrom(dplyr,everything)
-importFrom(dplyr,last_col)
-importFrom(dplyr,matches)
-importFrom(dplyr,num_range)
-importFrom(dplyr,starts_with)
+importFrom(dplyr,join_by)
 importFrom(magrittr,"%>%")
 importFrom(rlang,`:=`)
+importFrom(tidyselect,all_of)
+importFrom(tidyselect,any_of)
+importFrom(tidyselect,contains)
+importFrom(tidyselect,ends_with)
+importFrom(tidyselect,everything)
+importFrom(tidyselect,last_col)
+importFrom(tidyselect,matches)
+importFrom(tidyselect,num_range)
+importFrom(tidyselect,starts_with)
 importFrom(usethis,ui_code)
 importFrom(usethis,ui_info)
 importFrom(usethis,ui_nope)
