--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     assertthat,
+    cli,
     crayon,
     dplyr (>= 1.1.0),
     gert,
@@ -35,7 +36,7 @@ Imports:
     usethis,
     utils,
     vctrs
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Depends: 
     R (>= 4.1.0)
 Suggests:
