--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,13 +35,17 @@ export(read_rss)
 export(register_pdf_font)
 export(remove_nas)
 export(save_it)
+export(suggest_postcode_fixes)
 export(transpose_tbl_wider)
 export(view)
 export(view_xl)
 export(year_dates)
+importFrom(assertthat,assert_that)
 importFrom(dplyr,across)
 importFrom(dplyr,c_across)
 importFrom(dplyr,desc)
+importFrom(dplyr,if_any)
+importFrom(dplyr,if_else)
 importFrom(dplyr,join_by)
 importFrom(magrittr,"%>%")
 importFrom(rlang,`:=`)
