--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,6 @@ export(gitmoji_name)
 export(gmaps_to_sf)
 export(hcl_msoa_names)
 export(how_old_am_i)
-export(import_rds)
 export(knit_to_html5)
 export(myr_prompt_heavy)
 export(myr_prompt_light)
@@ -31,6 +30,7 @@ export(patch_join)
 export(postcode_data_join)
 export(project_mascot)
 export(random_tube_route)
+export(rationalise_df)
 export(read_rss)
 export(register_pdf_font)
 export(remove_nas)
@@ -63,3 +63,4 @@ importFrom(usethis,ui_info)
 importFrom(usethis,ui_nope)
 importFrom(usethis,ui_oops)
 importFrom(usethis,ui_stop)
+importFrom(utils,URLencode)
