Add reprex_to_gist() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(rationalise_df)
 export(read_rss)
 export(register_pdf_font)
 export(remove_nas)
+export(reprex_to_gist)
 export(save_it)
 export(suggest_postcode_fixes)
 export(transpose_tbl_wider)
@@ -47,6 +48,7 @@ importFrom(dplyr,desc)
 importFrom(dplyr,if_any)
 importFrom(dplyr,if_else)
 importFrom(dplyr,join_by)
+importFrom(rlang,.data)
 importFrom(rlang,`:=`)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
