--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,9 +30,9 @@ export(patch_join)
 export(postcode_data_join)
 export(project_mascot)
 export(random_tube_route)
+export(rationalise_df)
 export(read_rss)
 export(register_pdf_font)
-export(remove_nas)
 export(reprex_to_gist)
 export(save_it)
 export(suggest_postcode_fixes)
@@ -64,3 +64,4 @@ importFrom(usethis,ui_nope)
 importFrom(usethis,ui_oops)
 importFrom(usethis,ui_stop)
 importFrom(utils,URLencode)
+importFrom(vctrs,vec_in)
