--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(patch_join)
 export(postcode_data_join)
 export(project_mascot)
 export(random_tube_route)
+export(rationalise_df)
 export(read_rss)
 export(register_pdf_font)
 export(reprex_to_gist)
