--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ export(gitmoji_desc)
 export(gitmoji_name)
 export(gmaps_to_sf)
 export(hcl_msoa_names)
-export(how_old_am_i)
 export(knit_to_html5)
 export(myr_prompt_heavy)
 export(myr_prompt_light)
@@ -30,33 +29,35 @@ export(patch_join)
 export(postcode_data_join)
 export(project_mascot)
 export(random_tube_route)
+export(rationalise_df)
 export(read_rss)
 export(register_pdf_font)
 export(reprex_to_gist)
 export(save_it)
 export(suggest_postcode_fixes)
+export(theme_clay)
+export(theme_linen)
 export(transpose_tbl_wider)
-export(view)
 export(view_xl)
 export(year_dates)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,across)
-importFrom(dplyr,c_across)
 importFrom(dplyr,desc)
+importFrom(dplyr,first)
 importFrom(dplyr,if_any)
 importFrom(dplyr,if_else)
-importFrom(dplyr,join_by)
+importFrom(dplyr,pick)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,margin)
 importFrom(rlang,.data)
 importFrom(rlang,`:=`)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
-importFrom(tidyselect,contains)
 importFrom(tidyselect,ends_with)
 importFrom(tidyselect,everything)
-importFrom(tidyselect,last_col)
-importFrom(tidyselect,matches)
-importFrom(tidyselect,num_range)
-importFrom(tidyselect,starts_with)
 importFrom(usethis,ui_code)
 importFrom(usethis,ui_info)
 importFrom(usethis,ui_nope)
