myr_colours back to exported data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(gitmoji_name)
 export(gmaps_to_sf)
 export(hcl_msoa_names)
 export(knit_to_html5)
+export(myr_colours)
 export(myr_prompt_heavy)
 export(myr_prompt_light)
 export(myr_prompt_medium)
