--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(auto_reprex)
 export(batch_it)
 export(batch_it_simple)
 export(bbox_to_poly)
+export(col2hex)
 export(commonest)
 export(download_file)
 export(download_files)
@@ -19,7 +20,6 @@ export(gitmoji_name)
 export(gmaps_to_sf)
 export(hcl_msoa_names)
 export(knit_to_html5)
-export(myr_colours)
 export(myr_prompt_heavy)
 export(myr_prompt_light)
 export(myr_prompt_medium)
@@ -53,6 +53,8 @@ importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,margin)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,rgb)
 importFrom(rlang,.data)
 importFrom(rlang,`:=`)
 importFrom(tidyselect,all_of)
